syntax = "proto3";

option go_package = "github.com/teclegacy/oms/common/api";


service OrderService{
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}
message CreateOrderRequest{
  string CustomerId = 1;
  repeated ItemsWithQuantity Items = 2;
}
message ItemsWithQuantity{
  string ItemId = 1;
  int32 Quantity = 2;
}

message CreateOrderResponse{
  string Id = 1; // mongoose id of the order
  string CustomerId = 2;
  string Status = 3;
  repeated ItemsWithQuantity Items = 4;
}

message Items{
  string ItemId = 1;
  string Name = 2;
  int32 Quntity = 3;
  string PriceId = 4; // payment service id via stripe id 
}


/**
 * structure of the order
  *request -> { customerId: string, items: [{itemId: string, quantity: number}] }
  response -> { id: string, customerId: string, status: string, items: [{itemId: string, name:string ,quantity: number, PiceId : string }] }
 */

